--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
 
     <string name="book_name">Book</string>
     <string name="hint_book_name">Book</string>
-    <string name="book_author">Book</string>
-    <string name="hint_book_author">Book</string>
+    <string name="book_author">Author</string>
+    <string name="hint_author">Author</string>
     <string name="price">Price</string>
     <string name="hint_price">Price</string>
     <string name="qty">Quantity</string>
@@ -46,6 +46,7 @@
     <string name="check_qty">Book quantity is required</string>
     <string name="check_supplier">Book supplier is required</string>
     <string name="check_phone">Book supplier phone is required</string>
+    <string name="check_fields">Please fill in all fields</string>
 
 
 </resources>
